Minor change to defining custom filters in the dashboard configuration.  A few updates to the custom filter list based on the feedback from its code review.

--- a/client/app/config/sample.config.json
+++ b/client/app/config/sample.config.json
@@ -421,7 +421,7 @@
                 }]
             }, {
                 "label": "Networks",
-                "customized": {
+                "input": {
                     "field": "net"
                 }
             }],
@@ -440,7 +440,7 @@
                     "label": "Not Null",
                     "field": "myField"
                 }],
-                "customized": {
+                "input": {
                     "field": "myField",
                     "operator": "contains"
                 }
