--- a/client/app/config/sample.config.yaml
+++ b/client/app/config/sample.config.yaml
@@ -687,7 +687,7 @@ customFilters:
             value: sonicboom
       -
         label: Networks
-        customized:
+        input:
             field: net
     myTable: 
       -
@@ -705,7 +705,7 @@ customFilters:
           -
             label: Not Null
             field: myField
-        customized:
+        input:
             field: myField
             operator: contains
       -
