--- a/bower.json
+++ b/bower.json
@@ -16,25 +16,30 @@
         "angular-mocks": "1.3.14",
         "angular-route": "1.3.14",
         "angular-ui-tree": "2.5.0",
-        "bootstrap": "3.2.0",
+        "bootstrap": "3.3.6",
         "d3": "3.0.8",
         "html5shiv": "3.7.2",
         "jquery": "1.11.1",
         "jquery-ui": "1.10.4",
-        "threedubmedia.jquery.event": "2.2",
         "javascript-detect-element-resize": "sdecima/javascript-detect-element-resize#0.5.3",
         "jquery.linky": "0.1.8",
         "jquery.tagcloud": "https://github.com/addywaddy/jquery.tagcloud.js.git",
         "js-yaml": "3.4.3",
-        "mergesort": "https://github.com/justinforce/merge-sort/archive/1.0.zip",
+        "lodash": "4.13.1",
+        "log4javascript": "1.4.9",
         "mustache": "2.1.3",
         "ngDraggable": "0.1.8",
+        "node-uuid": "1.4.7",
         "opencpu": "https://github.com/NextCenturyCorporation/opencpu.js.git",
         "openlayers": "https://github.com/openlayers/openlayers/releases/download/release-2.13.1/OpenLayers-2.13.1.zip",
+        "postal": "2.0.4",
         "heatmapjs": "https://github.com/pa7/heatmap.js.git#v2.0",
         "remarkable-bootstrap-notify": "3.0.0",
         "respond": "1.4.2",
         "user-ale": "draperlaboratory/user-ale#67954dc8bcb02c657306ea89193b25e4831bf59e",
         "rainbowvis.js": "https://github.com/anomal/RainbowVis-JS.git"
+    },
+    "resolutions": {
+        "lodash": "~4.13.1"
     }
 }
