--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "karma-junit-reporter": "0.2.2",
     "karma-ng-html2js-preprocessor": "0.1.2",
     "karma-phantomjs-launcher": "1.0.0",
-    "phantomjs-prebuilt": "^2.1.10",
+    "phantomjs-prebuilt": "2.1.10",
     "shelljs": "0.4.0"
   },
   "scripts": {
