--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
     "name": "neon-gtd",
     "description": "A sample geo-temporal analysis dashboard that uses the neon.js library to show interactions between multiple visualizations of a dataset.",
-    "version": "1.3.1-SNAPSHOT",
+    "version": "1.3.1",
     "homepage": "https://github.com/NextCenturyCorporation/neon-gtd",
     "license": "Apache v2",
     "private": true,
