--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "neon-gtd",
   "shortDescription": "Neon Geo Temporal Dashboard",
   "description": "A sample geo-temporal analysis dashboard that uses the neon.js library to show interactions between multiple visualizations of a dataset.",
-  "version": "1.3.1",
+  "version": "1.3.2-SNAPSHOT",
   "repository": {
     "type": "git",
     "url": "https://github.com/NextCenturyCorporation/neon-gtd"
